<resources>
    <string name="menuItemDirection">Direction</string>
    <string name="menuItemLocation">Location</string>
    <string name="menuItemSaveCurrentPosition">Save position</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemInfo">Info</string>
    <string name="app_name">WalkersGuide-NG</string>
    <string name="openNavigationDrawer">Open tab menu</string>
    <string name="closeNavigationDrawer">Close tab menu</string>
    <string name="fragmentSearchName">Search</string>
    <string name="fragmentFavoriteName">Favorites</string>
    <string name="fragmentRouterName">Router</string>
    <string name="fragmentPOIName">POI</string>
    <string name="buttonRouteCommandList">Commands</string>
    <string name="buttonRecalculateRoute">Recalculate</string>
    <string name="buttonNewRoute">New route</string>
    <string name="buttonPreviousRouteObject">Previous</string>
    <string name="buttonNextRouteObject">Next</string>
    <string name="buttonPreviousProfile">Previous profile</string>
    <string name="buttonNextProfile">Next profile</string>
    <string name="emptyProfileList">No profile selected</string>
    <string name="buttonRefresh">Refresh</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonFilter">Filter</string>
    <string name="buttonMore">More</string>
    <string name="menuItemNewProfile">New profile</string>
    <string name="menuItemEditProfile">Edit profile</string>
    <string name="menuItemClearProfile">Clear profile</string>
    <string name="menuItemRemoveProfile">Remove profile</string>
    <string name="selectProfileDialogTitle">Select profile</string>
    <string name="newProfileDialogTitle">Create profile</string>
    <string name="editProfileDialogTitle">Edit profile</string>
    <string name="labelProfileName">Name:</string>
    <string name="messageProfileNameMissing">Please enter a profile name.</string>
    <string name="messageProfileExists">The profile with the name %1$s already exists.</string>
    <string name="messageCouldNotCreateProfile">The profile could not be created.</string>
    <string name="messageCouldNotEditProfile">The profile could not be modified.</string>
    <string name="clearProfileDialogTitle">Do you want to clear the profile %1$s?</string>
    <string name="removeProfileDialogTitle">Do you want to remove the profile %1$s?</string>
    <string name="labelFavoritesFragmentHeaderSuccessSingular">1 favorite found.\nOrder: %1$s</string>
    <string name="labelFavoritesFragmentHeaderSuccessSingularFiltered">1 favorite found.\nOrder: %1$s, filtered</string>
    <string name="labelFavoritesFragmentHeaderSuccessPlural">%1$d favorites found.\nOrder: %2$s</string>
    <string name="labelFavoritesFragmentHeaderSuccessPluralFiltered">%1$d favorites found.\nOrder: %2$s, filtered</string>
    <string name="labelFavoritesProfileSortCriteria">Sort criteria:</string>
    <string name="radioButtonSortDistanceAsc">Distance, ascending</string>
    <string name="radioButtonSortDistanceDesc">Distance, descending</string>
    <string name="radioButtonSortNameAsc">Name, ascending</string>
    <string name="radioButtonSortNameDesc">Name, descending</string>
    <string name="radioButtonSortOrderAsc">Date, ascending</string>
    <string name="radioButtonSortOrderDesc">Date, descending</string>
    <string name="messageNoSortCriteria">Please select a sort criteria from the list.</string>
    <string name="labelPOIFragmentHeaderSuccess">%1$d POI found.\nRadius: %2$d meters</string>
    <string name="labelPOIFragmentHeaderSuccessFiltered">%1$d POI found.\nRadius: %2$d meters (filtered)</string>
    <string name="labelMoreResults">Get more POI</string>
    <string name="labelPOIProfileCategories">POI categories:</string>
    <string name="pointDetailsActivityTitle">Details</string>
    <string name="labelGeneralPointDetails">General:</string>
    <string name="labelPointName">Name: %1$s</string>
    <string name="labelPointType">Type: %1$s</string>
    <string name="labelPointDistanceAndBearing">Distance: %1$d meters, %2$s</string>
    <string name="buttonPointFavorite">Favorite</string>
    <string name="buttonPointSimulateLocation">Simulate</string>
    <string name="labelAttributesPointDetails">Attributes:</string>
    <string name="fragmentDeparturesName">Departures</string>
    <string name="labelNextDepartures">Next departures:</string>
    <string name="buttonRefreshDepartureList">Refresh departure list</string>
    <string name="labelRequestingDepartures">Requesting next departures. Please wait.</string>
    <string name="labelNoDeparturesFound">No departures found.</string>
    <string name="fragmentEntrancesName">Entrances</string>
    <string name="labelNumberOfEntrancesSingular">POI has 1 entrance:</string>
    <string name="labelNumberOfEntrancesPlural">POI has %1$d entrances:</string>
    <string name="fragmentIntersectionWaysName">Ways</string>
    <string name="labelNumberOfIntersectionWaysAndBearing">Intersection with %1$d streets\nDirection: %2$s</string>
    <string name="fragmentPedestrianCrossingsName">Crossings</string>
    <string name="labelNumberOfPedestrianCrossingsSingular">1 crossing nearby:</string>
    <string name="labelNumberOfPedestrianCrossingsPlural">%1$d crossings nearby:</string>
    <string name="fragmentPointDetailsName">Details</string>
    <string name="segmentDetailsActivityTitle">Details</string>
    <string name="labelGeneralSegmentDetails">General:</string>
    <string name="labelSegmentName">Name: %1$s</string>
    <string name="labelSegmentType">Type: %1$s</string>
    <string name="labelSegmentAbsoluteBearing">Bearing: %1$d degree (%2$s)</string>
    <string name="labelSegmentRelativeBearing">Relative: %1$s</string>
    <string name="buttonSegmentExcludeFromRouting">Exclude</string>
    <string name="buttonSegmentSimulateDirection">Simulate</string>
    <string name="labelAttributesSegmentDetails">Attributes:</string>
    <string name="fragmentSegmentDetailsName">Details</string>
    <string name="fragmentNextIntersectionsName">Intersections</string>
    <string name="settingsActivityTitle">Settings</string>
    <string name="labelServerSettingsHeader">Server settings:</string>
    <string name="buttonServerURL">URL: %1$s</string>
    <string name="buttonServerURLNoSelection">URL: None selected</string>
    <string name="buttonServerMap">Map: %1$s</string>
    <string name="buttonServerMapNoSelection">Map: None selected</string>
    <string name="buttonServerPublicTransportProvider">Provider: %1$s</string>
    <string name="buttonServerPublicTransportProviderNoSelection">Provider: None selected</string>
    <string name="newServerDialogTitle">New server</string>
    <string name="editHintServerURL">Server URL</string>
    <string name="messageServerURLMissing">Please enter a server URL.</string>
    <string name="selectMapDialogTitle">Select map</string>
    <string name="selectPublicTransportProviderDialogTitle">Select public transport provider</string>
    <string name="infoActivityTitle">Info</string>
    <string name="labelAppInformationHeader">WalkersGuide:</string>
    <string name="labelInfoProgramVersion">Version</string>
    <string name="labelInfoEMail">Contact: support@walkersguide.org</string>
    <string name="labelInfoURL">Website: http://walkersguide.org</string>
    <string name="labelSelectedMapHeader">Selected Map:</string>
    <string name="labelSelectedMapName">Name:</string>
    <string name="labelSelectedMapVersion">Version:</string>
    <string name="labelSelectedMapCreated">Created:</string>
    <string name="enterAddressDialogName">Enter Address:</string>
    <string name="editHintAddress">city, street and house number</string>
    <string name="messageAddressMissing">Please enter an address.</string>
    <string name="selectDirectionSourceDialogName">Directional source:</string>
    <string name="formattedDirectionValue">%1$s: %2$d degree (%3$s)</string>
    <string name="directionSourceCompass">Compass</string>
    <string name="directionSourceGPS">GPS</string>
    <string name="directionSourceSimulated">Simulation</string>
    <string name="labelNoDirectionAvailable">No direction available</string>
    <string name="editHintDirectionInDegree">Direction in degree between 0 and 359.</string>
    <string name="selectLocationSourceDialogName">Location source:</string>
    <string name="locationSourceGPS">GPS</string>
    <string name="labelGPSLatitude">Latitude:</string>
    <string name="labelGPSLongitude">Longitude:</string>
    <string name="labelGPSProvider">Provider:</string>
    <string name="labelGPSAccuracy">Accuracy:</string>
    <string name="labelGPSAltitude">Altitude:</string>
    <string name="labelGPSBearing">Bearing:</string>
    <string name="labelGPSSpeed">Speed:</string>
    <string name="labelGPSTime">Last fix:</string>
    <string name="labelNoGPSLocationAvailable">Got no location fix</string>
    <string name="locationSourceSimulatedPoint">Simulation</string>
    <string name="labelNoSimulatedPointSelected">No point selected</string>
    <string name="buttonDelete">Delete</string>
    <string name="wayPointName">Way point</string>
    <string name="currentLocationName">GPS location</string>
    <string name="intersectionDescription">%1$s\nIntersection with %2$d streets</string>
    <string name="entranceSingular">entrance</string>
    <string name="entrancePlural">entrances</string>
    <string name="stationLines">Lines: %1$s</string>
    <string name="roStationExactStopPosition">, precise station location available</string>
    <string name="roStationNoExactStopPosition">, precise station location not available</string>
    <string name="streetAddressPointName">Address</string>
    <string name="lineNrAndDirection">%1$s to %2$s</string>
    <string name="fpNameAllPoints">All points</string>
    <string name="fpNameAddresses">Addresses</string>
    <string name="fpNameSimulatedPoints">Simulated points</string>
    <string name="fpNameMyEntrances">My entrances</string>
    <string name="labelPOICategoryBusTram">Bus and tram stations</string>
    <string name="labelPOICategoryTrain">Train, suburban train and subway stations</string>
    <string name="labelPOICategoryAirportFerry">Airports, ferry terminals and aerial cableways</string>
    <string name="labelPOICategoryTaxi">Cabs</string>
    <string name="labelPOICategoryFood">Food</string>
    <string name="labelPOICategoryTourism">Tourism</string>
    <string name="labelPOICategoryShop">Shopping</string>
    <string name="labelPOICategoryHealth">Health</string>
    <string name="labelPOICategoryEducation">Education</string>
    <string name="labelPOICategoryFinance">Finance</string>
    <string name="labelPOICategoryEntertainment">Sports and entertainment</string>
    <string name="labelPOICategoryPublicService">Public services</string>
    <string name="labelPOICategoryBuildingsWithName">All buildings with a name</string>
    <string name="labelPOICategoryEntrance">Entrances</string>
    <string name="labelPOICategorySurveillance">Surveillance cameras</string>
    <string name="labelPOICategoryBench">Benches</string>
    <string name="labelPOICategoryTrash">Trash cans</string>
    <string name="labelPOICategoryNature">Lakes and mountains</string>
    <string name="labelPOICategoryBridge">Bridges</string>
    <string name="labelPOICategoryNamedIntersection">Intersections with name</string>
    <string name="labelPOICategoryOtherIntersection">Intersections without name</string>
    <string name="labelPOICategoryPedestrianCrossings">Pedestrian traffic signals and zebra crossings</string>
    <string name="pointListObjectDescription">%1$s\nIn %2$d meters, %3$s</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="dialogOK">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogNext">Next</string>
</resources>