<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuItemDirection"
        android:icon="@drawable/compass"
        android:title="@string/menuItemDirection"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemLocation"
        android:icon="@drawable/satellite"
        android:title="@string/menuItemLocation"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemSaveCurrentPosition"
        android:icon="@drawable/pin"
        android:title="@string/menuItemSaveCurrentPosition"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemSettings"
        android:title="@string/menuItemSettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuItemInfo"
        android:title="@string/menuItemInfo"
        app:showAsAction="never" />
</menu>
