<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelGPSLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/labelGPSLatitude" />

        <TextView
            android:id="@+id/labelGPSLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/labelGPSLongitude" />

        <TextView
            android:id="@+id/labelGPSProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/labelGPSProvider" />

        <TextView
            android:id="@+id/labelGPSAccuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/labelGPSAccuracy" />

        <TextView
            android:id="@+id/labelGPSAltitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/labelGPSAltitude" />

        <TextView
            android:id="@+id/labelGPSBearing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/labelGPSBearing" />

        <TextView
            android:id="@+id/labelGPSSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/labelGPSSpeed" />

        <TextView
            android:id="@+id/labelGPSTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/labelGPSTime" />

    </LinearLayout>
</ScrollView>
