<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activityMargin"
    android:orientation="vertical" >

    <include
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:textStyle="bold"
                android:textColor="@color/heading"
                android:text="@string/labelAppInformationHeader" />

            <TextView
                android:id="@+id/labelProgramVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/labelInfoProgramVersion" />

            <TextView
                android:id="@+id/labelInfoEMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/labelInfoEMail"
                android:autoLink="email" />

            <TextView
                android:id="@+id/labelInfoURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/labelInfoURL"
                android:autoLink="web" />

            <!-- selected map -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:textStyle="bold"
                android:textColor="@color/heading"
                android:text="@string/labelSelectedMapHeader" />

            <TextView
                android:id="@+id/labelSelectedMapName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/labelSelectedMapName" />

            <TextView
                android:id="@+id/labelSelectedMapVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/labelSelectedMapVersion" />

            <TextView
                android:id="@+id/labelSelectedMapCreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/labelSelectedMapCreated" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
