<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioCompassDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/directionSourceCompass" />

            <TextView
                android:id="@+id/labelCompassDirectionDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/minHeight"
                android:focusable="true" />

            <RadioButton
                android:id="@+id/radioGPSDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/directionSourceGPS" />

            <TextView
                android:id="@+id/labelGPSDirectionDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/minHeight"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/buttonEnableSimulation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonEnableDirectionSimulation" />

            <Button
                android:id="@+id/buttonSimulatedDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directionSourceSimulated" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
