<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonRouteCommandList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/buttonRouteCommandList" />

        <Button
            android:id="@+id/buttonRecalculateRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/buttonRecalculateRoute" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#444444" />

        <TextView
            android:id="@+id/labelDistanceAndBearing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonPreviousRouteObject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/buttonPreviousRouteObject" />

            <TextView
                android:id="@+id/labelRoutePosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center_horizontal"
                android:focusable="true" />

            <Button
                android:id="@+id/buttonNextRouteObject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/buttonNextRouteObject" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSelectPOIProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSelectPOIProfile" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonNewRoute"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@id/layoutTop"
        android:layout_above="@id/layoutBottom"
        android:text="@string/buttonNewRoute" />

    <ScrollView
        android:id="@+id/scrollviewDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutTop"
        android:layout_above="@id/layoutBottom" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelRouteSegmentDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="true" />

            <TextView
                android:id="@+id/labelRoutePointDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:focusable="true" />

            <TextView
                android:id="@+id/labelIntersectionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
